# cxlog

./: .counsel_ignore.el  .gitignore  CMakeLists.txt  README.md
include/cxlog/: logger.h  macro.h  util.h
include/cxlog/formatter/: func.h  null.h
include/cxlog/formatter/text/: color_mgr.h  config.h  context_formatter.h  element_formatter.h  file_formatter.h  fmt.h  formatter.h  func_formatter.h  header_appender.h  level_formatter.h  line_formatter.h  msg_formatter.h  prefix_formatter.h  time_formatter.h
include/cxlog/iface/: iface.h  level.h
include/cxlog/logger/: config.h  context.h  error_handler.h  filter.h  logger.h  logic.h  pretty.h  slot.h  timing.h  util.h
include/cxlog/writer/: func.h  null.h  wrapper.h
src/: logger.cpp
src/formatter/: null.cpp
src/formatter/text/: formatter.cpp  header_appender.cpp  time_formatter.cpp
src/logger/: config.cpp  error_handler.cpp  error_handler_inl.h  filter.cpp  filter_inl.h  logger.cpp  logic.cpp
src/writer/: null.cpp
